Fix box-shadow in profile dropdown; no longer bleeding over top

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -38,6 +38,10 @@ body h2 {
   background-color: #fff;
   z-index: 2;
   width: 15rem;
+  -webkit-box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.4);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    3px 3px 5px 0 rgba(0, 0, 0, 0.4);  /* Firefox 3.5 - 3.6 */
+  box-shadow:         3px 3px 5px 0 rgba(0, 0, 0, 0.4);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+
 }
 
 .card-block {
